--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -11,6 +11,10 @@
   }
 }
 @import "fonts.scss";
+*{
+  font-family: "MuseoModerno", sans-serif;
+}
 @import "variables.scss";
 @import "general.scss";
 @import "media.scss";
+
