--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -17,6 +17,30 @@
   }
   &--big {
     padding: 13px 28px;
+    font-size: 16px;
+  }
+}
+.form {
+  width: 260px;
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"] {
+    width: 100%;
+    background-color: $white;
+    padding: 20px;
+    height: 53px;
+    font-size: 14px;
+    line-height: 66px;
+    color: #4b4b4b;
+    border-radius: 5px;
+  }
+  input[type="tel"] {
+    margin: 12px 0px;
+  }
+  .btn--big {
+    width: 100%;
+    margin-top: 17px;
+    font-size: 15px;
   }
 }
 ///////////////////////////////
@@ -98,6 +122,12 @@
     font-size: 14px;
     margin-bottom: 65px;
     img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 45px;
+      height: 45px;
+      object-fit: contain;
       margin-bottom: 20px;
     }
   }
@@ -105,10 +135,91 @@
     font-weight: 500;
     font-size: 16px;
     margin-top: 10px;
-    a{
+    a {
       text-decoration: underline;
       text-transform: uppercase;
-      color:$white;
+      color: $white;
     }
+  }
+}
+///////////////////////////////
+.feature {
+  background-color: #f6f6f6;
+  min-height: 470px;
+  padding-top: 70px;
+  padding-bottom: 65px;
+  &__title {
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    color: $black;
+  }
+  &__wrapper {
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 270px;
+  }
+  &__img {
+    display: block;
+    width: 70px;
+    height: 70px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+  &__subtitle {
+    margin-top: 35px;
+    font-weight: 700;
+    font-size: 18px;
+    color: $black;
+    text-align: center;
+  }
+  &__text {
+    margin-top: 20px;
+    font-weight: 300;
+    font-size: 14px;
+    color: #0d0d0d;
+    text-align: center;
+    line-height: 18px;
+  }
+  &__link {
+    color: $main_color;
+    text-decoration: underline;
+  }
+}
+///////////////////////////////
+.communication {
+  min-height: 680px;
+  padding-top: 100px;
+  padding-bottom: 108px;
+  background: url("../img/form_bg.png") center (center/cover) no-repeat;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: $white;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    text-transform: uppercase;
+  }
+  &__text {
+    margin-top: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  &__form {
+    margin-top: 35px;
   }
 }
