--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -162,6 +162,33 @@ h6 {
   font-size: 16px;
 }
 
+.form {
+  width: 260px;
+}
+
+.form input[type=text],
+.form input[type=tel],
+.form input[type=email] {
+  width: 100%;
+  background-color: #fff;
+  padding: 20px;
+  height: 53px;
+  font-size: 14px;
+  line-height: 66px;
+  color: #4b4b4b;
+  border-radius: 5px;
+}
+
+.form input[type=tel] {
+  margin: 12px 0px;
+}
+
+.form .btn--big {
+  width: 100%;
+  margin-top: 17px;
+  font-size: 15px;
+}
+
 .no-webp .promo{
   background: url("../img/header_background.png") center center/cover no-repeat; }
 
@@ -319,7 +346,7 @@ h6 {
 
 .feature {
   background-color: #f6f6f6;
-  max-height: 470px;
+  min-height: 470px;
   padding-top: 70px;
   padding-bottom: 65px;
 }
@@ -390,6 +417,47 @@ h6 {
   text-decoration: underline;
 }
 
+.no-webp .communication{
+  background: url("../img/form_bg.png") center center/cover no-repeat; }
+
+.communication {
+  min-height: 680px;
+  padding-top: 100px;
+  padding-bottom: 108px;
+}
+
+.communication__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  color: #fff;
+}
+
+.communication__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+  text-transform: uppercase;
+}
+
+.communication__text {
+  margin-top: 10px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.communication__form {
+  margin-top: 35px;
+}
+
 @media (max-width: 991px) {
   .container {
     padding-left: 15px;
@@ -407,6 +475,10 @@ h6 {
 
   .feature__item:last-child {
     margin-right: 0px;
+  }
+
+  .communication__title {
+    font-size: 34px;
   }
 }
 
@@ -524,6 +596,11 @@ h6 {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2/3;
+  }
+
+  .communication__title {
+    font-size: 30px;
+    line-height: 42px;
   }
 }
 
@@ -648,6 +725,22 @@ h6 {
     grid-column: 1/3;
     font-size: 12px;
   }
+
+  .communication {
+    padding-top: 70px;
+    padding-bottom: 80px;
+  }
+
+  .communication__title {
+    font-size: 26px;
+    line-height: 34px;
+  }
+
+  .communication__text {
+    font-size: 15px;
+  }
 }
 
 .webp .promo{ background: url(../img/header_background.webp) center center/cover no-repeat; }
+
+.webp .communication{ background: url(../img/form_bg.webp) center center/cover no-repeat; }
