--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -223,3 +223,28 @@
     margin-top: 35px;
   }
 }
+///////////////////////////////
+.slider {
+  padding: 81px 0;
+}
+.swiper {
+  width: 950px;
+  height: 580px;
+}
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 750px;
+  height: 580px;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  display: none;
+}
