--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -458,6 +458,42 @@ h6 {
   margin-top: 35px;
 }
 
+.slider {
+  padding: 81px 0;
+}
+
+.swiper {
+  width: 950px;
+  height: 580px;
+}
+
+.swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 750px;
+  height: 580px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  display: none;
+}
+
 @media (max-width: 991px) {
   .container {
     padding-left: 15px;
