--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -10,6 +10,7 @@
   font-weight: 500;
   color: $white;
   border: none;
+  box-shadow: 2px 2px 4px $main_color;
   &--small {
     margin-top: 7px;
     font-size: 12px;
@@ -186,7 +187,7 @@
     margin-top: 20px;
     font-weight: 300;
     font-size: 14px;
-    color: #0d0d0d;
+    color: $black;
     text-align: center;
     line-height: 18px;
   }
@@ -247,4 +248,119 @@
 .swiper-button-next:after,
 .swiper-button-prev:after {
   display: none;
+}
+///////////////////////////////
+.catalog {
+  padding-bottom: 100px;
+  &__title {
+    font-size: 30px;
+    line-height: 45px;
+    text-align: center;
+    text-transform: uppercase;
+    color: $black;
+  }
+  &__tabs {
+    margin-top: 46px;
+    display: flex;
+    justify-content: center;
+  }
+  &__tabs-item {
+    width: 222px;
+    height: 52px;
+    border: 2px solid #d0d0d0;
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #6b6b6b;
+    line-height: 50px;
+    margin-right: 10px;
+    transform: skewX(-30deg);
+    cursor: pointer;
+    transition: 0.8s all ease;
+    &:last-child {
+      margin-right: 0;
+    }
+    div {
+      transform: skewX(30deg);
+    }
+    &:hover {
+      background-color: $main_color;
+      color: $white;
+      border: none;
+      box-shadow: 4px 4px 10px $main_color;
+    }
+  }
+  &__content {
+    margin-top: 57px;
+  }
+  .catalog-item {
+    width: 300px;
+    min-height: 440px;
+    border: 2px solid #e8e8e8;
+    color: $black;
+    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    &__img {
+      width: 140px;
+      height: 200px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    &__title {
+      margin-top: 15px;
+      font-weight: bold;
+      font-size: 16px;
+    }
+    &__text {
+      margin-top: 15px;
+      font-weight: 300;
+      font-size: 14px;
+      text-align: center;
+      line-height: 22px;
+    }
+    &__link {
+      margin-top: 10px;
+      font-weight: 500;
+      font-size: 14px;
+      text-decoration: underline;
+      color: $main_color;
+    }
+    &__wrapper {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 20px;
+    }
+    &__price {
+      margin-right: 20px;
+    }
+    &__cena {
+      font-weight: 300;
+      font-size: 14px;
+      text-decoration: line-through;
+      color: #555555;
+    }
+    &__promo {
+      margin-top: 3px;
+      font-weight: bold;
+      font-size: 20px;
+      color: #050505;
+      text-decoration: none;
+    }
+    &__btn {
+      padding: 10px 25px;
+    }
+    hr {
+      margin: 17px 0;
+      display: block;
+      width: 260px;
+      background-color: #e8e8e8;
+      height: 1px;
+    }
+  }
 }
