--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -149,6 +149,8 @@ h6 {
   font-weight: 500;
   color: #fff;
   border: none;
+  -webkit-box-shadow: 2px 2px 4px #C70101;
+          box-shadow: 2px 2px 4px #C70101;
 }
 
 .btn--small {
@@ -407,7 +409,7 @@ h6 {
   margin-top: 20px;
   font-weight: 300;
   font-size: 14px;
-  color: #0d0d0d;
+  color: #0D0D0D;
   text-align: center;
   line-height: 18px;
 }
@@ -492,6 +494,165 @@ h6 {
 .swiper-button-next:after,
 .swiper-button-prev:after {
   display: none;
+}
+
+.catalog {
+  padding-bottom: 100px;
+}
+
+.catalog__title {
+  font-size: 30px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #0D0D0D;
+}
+
+.catalog__tabs {
+  margin-top: 46px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.catalog__tabs-item {
+  width: 222px;
+  height: 52px;
+  border: 2px solid #d0d0d0;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #6b6b6b;
+  line-height: 50px;
+  margin-right: 10px;
+  -webkit-transform: skewX(-30deg);
+      -ms-transform: skewX(-30deg);
+          transform: skewX(-30deg);
+  cursor: pointer;
+  -webkit-transition: 0.8s all ease;
+  -o-transition: 0.8s all ease;
+  transition: 0.8s all ease;
+}
+
+.catalog__tabs-item:last-child {
+  margin-right: 0;
+}
+
+.catalog__tabs-item div {
+  -webkit-transform: skewX(30deg);
+      -ms-transform: skewX(30deg);
+          transform: skewX(30deg);
+}
+
+.catalog__tabs-item:hover {
+  background-color: #C70101;
+  color: #fff;
+  border: none;
+  -webkit-box-shadow: 4px 4px 10px #C70101;
+          box-shadow: 4px 4px 10px #C70101;
+}
+
+.catalog__content {
+  margin-top: 57px;
+}
+
+.catalog .catalog-item {
+  width: 300px;
+  min-height: 440px;
+  border: 2px solid #e8e8e8;
+  color: #0D0D0D;
+  padding: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.catalog .catalog-item__img {
+  width: 140px;
+  height: 200px;
+}
+
+.catalog .catalog-item__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.catalog .catalog-item__title {
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.catalog .catalog-item__text {
+  margin-top: 15px;
+  font-weight: 300;
+  font-size: 14px;
+  text-align: center;
+  line-height: 22px;
+}
+
+.catalog .catalog-item__link {
+  margin-top: 10px;
+  font-weight: 500;
+  font-size: 14px;
+  text-decoration: underline;
+  color: #C70101;
+}
+
+.catalog .catalog-item__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 20px;
+}
+
+.catalog .catalog-item__price {
+  margin-right: 20px;
+}
+
+.catalog .catalog-item__cena {
+  font-weight: 300;
+  font-size: 14px;
+  text-decoration: line-through;
+  color: #555555;
+}
+
+.catalog .catalog-item__promo {
+  margin-top: 3px;
+  font-weight: bold;
+  font-size: 20px;
+  color: #050505;
+  text-decoration: none;
+}
+
+.catalog .catalog-item__btn {
+  padding: 10px 25px;
+}
+
+.catalog .catalog-item hr {
+  margin: 17px 0;
+  display: block;
+  width: 260px;
+  background-color: #e8e8e8;
+  height: 1px;
 }
 
 @media (max-width: 991px) {
