--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -277,6 +277,12 @@
     transform: skewX(-30deg);
     cursor: pointer;
     transition: 0.8s all ease;
+    &--active{
+      background-color: $main_color;
+      color: $white;
+      border: none;
+      box-shadow: 4px 4px 10px $main_color;
+    }
     &:last-child {
       margin-right: 0;
     }
@@ -292,6 +298,13 @@
   }
   &__content {
     margin-top: 57px;
+    display: none;
+    grid-template-columns: repeat(auto-fit,300px);
+    gap: 20px;
+    justify-items: start;
+    &--active{
+      display: grid;
+    }
   }
   .catalog-item {
     width: 300px;
@@ -301,8 +314,7 @@
     padding: 20px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    // overflow: hidden;
     &__img {
       width: 140px;
       height: 200px;
@@ -361,6 +373,56 @@
       width: 260px;
       background-color: #e8e8e8;
       height: 1px;
+    }
+    &__card{
+      display: flex;
+      width:200%;
+    }
+    &__front-side {
+      width:50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      transform: translateX(-100%);
+      transition: 0.7s all;
+        &--active{
+          transform: translateX(0%); 
+      }
+    }
+    &__back-side {
+      width:50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 15px 0px 15px;
+      transform: translateX(0%);
+      transition: 0.7s all;
+        &--active{
+          transform: translateX(-100%);
+        }
+    }
+    &__list {
+      li {
+        padding-left: 16px;
+        position: relative;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 21px;
+        color: #555555;
+        margin-bottom: 10px;
+        &::before {
+          content: "";
+          position: absolute;
+          display: block;
+          top: 5px;
+          left: 0px;
+          width: 9px;
+          height: 9px;
+          background-color: $main_color;
+        }
+      }
     }
   }
 }
