--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -314,7 +314,7 @@
     padding: 20px 0;
     display: flex;
     flex-direction: column;
-    // overflow: hidden;
+    overflow: hidden;
     &__img {
       width: 140px;
       height: 200px;
@@ -336,14 +336,14 @@
       text-align: center;
       line-height: 22px;
     }
-    &__link {
+    &__link, &__back-link {
       margin-top: 10px;
       font-weight: 500;
       font-size: 14px;
       text-decoration: underline;
       color: $main_color;
     }
-    &__wrapper {
+    &__bottom-wrapper {
       display: flex;
       justify-content: space-between;
       padding: 0 20px;
@@ -374,9 +374,10 @@
       background-color: #e8e8e8;
       height: 1px;
     }
+
     &__card{
       display: flex;
-      width:200%;
+      width:calc(200% + 40px);
     }
     &__front-side {
       width:50%;
