--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -532,18 +532,77 @@
     color: $white;
     margin-bottom: 34px;
   }
-  &__social{
-    width:215px;
+  &__social {
+    width: 215px;
     display: flex;
     justify-content: space-between;
   }
-  &__social-item{
-    width:53px;
+  &__social-item {
+    width: 53px;
     height: 53px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border:3px solid $white;
+    border: 3px solid $white;
   }
+}
+//////////////////////////////
+.popup {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 390px;
+  min-height: 400px;
+  padding: 40px;
+  background: #f2f2f2;
+  &__close {
+    position: absolute;
+    top: -10px;
+    right: -33px;
+    font-size: 50px;
+    line-height: 50px;
+    color: $main_color;
+    position: absolute;
+    cursor: pointer;
+  }
+  &__title {
+    font-weight: bold;
+    font-size: 19px;
+    text-align: center;
+    line-height: 19px;
+    color: $black;
+    margin-bottom: 10px;
+  }
+  &__subtitle {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    color: $black;
+    margin-bottom: 25px;
+  }
+  form {
+    width: 100%;
+  }
+  &--mini {
+    padding: 40px 40px 10px;
+    min-height: 120px;
+  }
+}
+
+#consultation,
+#order,
+#thanks {
+  display: none;
 }
