--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -930,6 +930,73 @@ h6 {
   border: 3px solid #fff;
 }
 
+.popup {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 390px;
+  min-height: 400px;
+  padding: 40px;
+  background: #f2f2f2;
+}
+
+.modal__close {
+  position: absolute;
+  top: -10px;
+  right: -33px;
+  font-size: 50px;
+  line-height: 50px;
+  color: #C70101;
+  position: absolute;
+  cursor: pointer;
+}
+
+.modal__title {
+  font-weight: bold;
+  font-size: 19px;
+  text-align: center;
+  line-height: 19px;
+  color: #0D0D0D;
+  margin-bottom: 10px;
+}
+
+.modal__subtitle {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  color: #0D0D0D;
+  margin-bottom: 25px;
+}
+
+.modal form {
+  width: 100%;
+}
+
+.modal--mini {
+  padding: 40px 40px 10px;
+  min-height: 120px;
+}
+
+#consultation,
+#order,
+#thanks {
+  display: none;
+}
+
 @media (max-width: 991px) {
   .container {
     padding-left: 15px;
