--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -519,6 +519,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 2px 2px 4px $main_color;
   }
   &__adress {
     font-weight: 500;
@@ -566,6 +567,7 @@
   min-height: 400px;
   padding: 40px;
   background: #f2f2f2;
+  box-shadow: 1px 1px 15px $black;
   &__close {
     position: absolute;
     top: -10px;
