--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -22,6 +22,13 @@
   }
 }
 .form {
+  .error{
+    border:1px solid $main_color;
+  }
+  label.error{
+    border:none;
+    color:$main_color;
+  }
   width: 260px;
   input[type="text"],
   input[type="tel"],
@@ -34,14 +41,18 @@
     line-height: 66px;
     color: #4b4b4b;
     border-radius: 5px;
-  }
-  input[type="tel"] {
-    margin: 12px 0px;
+    margin-top: 6px;
+    margin-bottom: 8px;
   }
   .btn--big {
     width: 100%;
     margin-top: 17px;
     font-size: 15px;
+  }
+}
+.form-white{
+  label.error{
+    color:$white;
   }
 }
 ///////////////////////////////
