--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -22,12 +22,12 @@
   }
 }
 .form {
-  .error{
-    border:1px solid $main_color;
+  .error {
+    border: 1px solid $main_color;
   }
-  label.error{
-    border:none;
-    color:$main_color;
+  label.error {
+    border: none;
+    color: $main_color;
   }
   width: 260px;
   input[type="text"],
@@ -50,9 +50,9 @@
     font-size: 15px;
   }
 }
-.form-white{
-  label.error{
-    color:$white;
+.form-white {
+  label.error {
+    color: $white;
   }
 }
 ///////////////////////////////
@@ -613,9 +613,29 @@
     min-height: 120px;
   }
 }
-
 #consultation,
 #order,
 #thanks {
   display: none;
+}
+//////////////////////////////
+.up {
+  cursor: pointer;
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 45px;
+  height: 45px;
+  &__img {
+    transition: 0.5s;
+    width: 100%;
+    height: 100%;
+    filter: invert(11%) sepia(69%) saturate(6907%) hue-rotate(1deg)
+      brightness(87%) contrast(113%);
+    &:hover{
+      transform: scale(1.3);
+      transition: 0.5s;
+    }
+  }
 }
