--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -14,6 +14,9 @@
 *{
   font-family: "MuseoModerno", sans-serif;
 }
+html{
+  scroll-behavior: smooth;
+}
 @import "variables.scss";
 @import "general.scss";
 @import "media.scss";
