--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -136,6 +136,10 @@ h6 {
   font-family: "MuseoModerno", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   max-width: 950px;
   margin: 0 auto;
@@ -1010,6 +1014,35 @@ h6 {
 #order,
 #thanks {
   display: none;
+}
+
+.up {
+  cursor: pointer;
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 45px;
+  height: 45px;
+}
+
+.up__img {
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  width: 100%;
+  height: 100%;
+  -webkit-filter: invert(11%) sepia(69%) saturate(6907%) hue-rotate(1deg) brightness(87%) contrast(113%);
+          filter: invert(11%) sepia(69%) saturate(6907%) hue-rotate(1deg) brightness(87%) contrast(113%);
+}
+
+.up__img:hover {
+  -webkit-transform: scale(1.3);
+      -ms-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
 
 @media (max-width: 991px) {
