--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -18,6 +18,7 @@ html{
   scroll-behavior: smooth;
 }
 @import "variables.scss";
+@import "animate.scss";
 @import "general.scss";
 @import "media.scss";
 
