--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -332,7 +332,7 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
     &__title {
@@ -518,6 +518,13 @@
 .footer {
   height: 630px;
   position: relative;
+  &__map{
+    iframe{
+      width: 100%;
+      height: 630px;
+      border:none;
+    }
+  }
   &__info {
     position: absolute;
     top: 0;
@@ -557,6 +564,13 @@
     justify-content: center;
     border-radius: 50%;
     border: 3px solid $white;
+    &:hover{
+      border: 3px solid $main_color;
+      background-color:$white;
+      img{
+        filter: invert(95%) sepia(97%) saturate(14%) hue-rotate(213deg) brightness(104%) contrast(104%);
+      }
+    }
   }
 }
 //////////////////////////////
@@ -634,7 +648,7 @@
     filter: invert(11%) sepia(69%) saturate(6907%) hue-rotate(1deg)
       brightness(87%) contrast(113%);
     &:hover{
-      transform: scale(1.3);
+      transform: scale(1.5);
       transition: 0.5s;
     }
   }
