--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -566,10 +566,10 @@ html {
 
 .swiper-slide img {
   display: block;
-  width: 100%;
+  width: 750px;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .swiper-button-next:after,
@@ -674,7 +674,7 @@ html {
 }
 
 .catalog .catalog-item__img {
-  width: 140px;
+  width: 240px;
   height: 200px;
 }
 
@@ -753,7 +753,7 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: calc(200% + 40px);
+  width: calc(200% + 20px);
 }
 
 .catalog .catalog-item__front-side {
@@ -777,6 +777,7 @@ html {
   -webkit-transition: 0.7s all;
   -o-transition: 0.7s all;
   transition: 0.7s all;
+  padding: 10px;
 }
 
 .catalog .catalog-item__front-side--active {
@@ -1102,6 +1103,7 @@ html {
   cursor: pointer;
   display: none;
   position: fixed;
+  z-index: 3;
   bottom: 50px;
   right: 50px;
   width: 45px;
@@ -1148,6 +1150,81 @@ html {
 
   .communication__title {
     font-size: 34px;
+  }
+
+  .slider {
+    padding: 0;
+  }
+
+  .swiper {
+    width: 700px;
+    height: 480px;
+  }
+
+  .swiper-slide img {
+    width: 500px;
+  }
+
+  .catalog {
+    padding-bottom: 50px;
+  }
+
+  .catalog__tabs {
+    margin-top: 30px;
+  }
+
+  .catalog__tabs-item {
+    width: 180px;
+    font-size: 16px;
+    margin-right: 15px;
+  }
+
+  .catalog__content {
+    margin-top: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .footer {
+    height: 500px;
+  }
+
+  .footer__map iframe {
+    height: 500px;
+  }
+
+  .footer__info {
+    width: 360px;
+    height: 200px;
+  }
+
+  .footer__adress {
+    margin-bottom: 24px;
+  }
+
+  .footer__phone {
+    margin-bottom: 24px;
+  }
+
+  .footer__social-item {
+    width: 45px;
+    height: 45px;
+  }
+
+  .modal {
+    width: 320px;
+    min-height: 350px;
+    padding: 20px;
+  }
+
+  .modal__subtitle {
+    margin-bottom: 15px;
+  }
+
+  .up {
+    bottom: 25px;
+    right: 25px;
   }
 }
 
@@ -1271,6 +1348,96 @@ html {
     font-size: 30px;
     line-height: 42px;
   }
+
+  .slider {
+    margin-bottom: 20px;
+  }
+
+  .swiper {
+    width: 550px;
+    height: 380px;
+  }
+
+  .swiper-slide {
+    height: 380px;
+  }
+
+  .swiper-slide img {
+    width: 400px;
+  }
+
+  .catalog__tabs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .catalog__tabs-item {
+    width: 242px;
+    margin-right: 15px;
+    margin-bottom: 20px;
+  }
+
+  .catalog__tabs-item:nth-child(even) {
+    margin-right: 0;
+  }
+
+  .catalog__tabs-item:last-child {
+    margin-right: 0;
+  }
+
+  .catalog__content {
+    margin-top: 15px;
+    grid-template-columns: repeat(auto-fit, 250px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .catalog .catalog-item {
+    width: 250px;
+    padding-left: -10px;
+  }
+
+  .catalog .catalog-item__img {
+    width: 250px;
+  }
+
+  .catalog .catalog-item__bottom-wrapper {
+    padding: 10px;
+  }
+
+  .catalog .catalog-item__price {
+    margin-right: 0px;
+  }
+
+  .catalog .catalog-item__btn {
+    padding: 10px 25px;
+  }
+
+  .catalog .catalog-item hr {
+    margin: 17px auto;
+    display: block;
+    width: 220px;
+    background-color: #e8e8e8;
+    height: 2px;
+  }
+
+  .catalog .catalog-item__card {
+    width: 200%;
+  }
+
+  .catalog .catalog-item__front-side {
+    padding: 0px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -1318,6 +1485,102 @@ html {
   .feature__text {
     font-size: 12px;
     padding: 0px 10px;
+  }
+
+  .slider {
+    margin-bottom: 20px;
+  }
+
+  .swiper {
+    width: 450px;
+    height: 380px;
+  }
+
+  .swiper-slide {
+    height: 350px;
+  }
+
+  .swiper-slide img {
+    width: 330px;
+  }
+
+  .catalog__content {
+    grid-template-columns: repeat(auto-fit, 430px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+
+  .catalog .catalog-item {
+    min-height: 400px;
+    width: 400px;
+    padding: 0;
+  }
+
+  .catalog .catalog-item__img {
+    width: 350px;
+    height: 200px;
+  }
+
+  .catalog .catalog-item__text {
+    padding: 0 10px;
+  }
+
+  .catalog .catalog-item hr {
+    margin: 10px auto;
+    display: block;
+    width: 340px;
+    background-color: #e8e8e8;
+    height: 2px;
+  }
+
+  .feedback {
+    padding-bottom: 50px;
+  }
+
+  .feedback__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 60px;
+  }
+
+  .feedback__item:last-child {
+    margin-bottom: 0px;
+  }
+
+  .feedback__image {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 0px;
+  }
+
+  .feedback__contents {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .up {
+    bottom: 35px;
+    right: 35px;
+    width: 35px;
+    height: 35px;
   }
 }
 
