--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -78,7 +78,6 @@
   }
   .modal {
     width: 320px;
-    min-height: 350px;
     padding: 20px;
     &__subtitle {
       margin-bottom: 15px;
@@ -216,12 +215,12 @@
     }
     .catalog-item {
       width: 250px;
-      padding-left:-10px;
+      padding-left: -10px;
       &__img {
         width: 250px;
       }
       &__bottom-wrapper {
-        padding:10px;
+        padding: 10px;
       }
       &__price {
         margin-right: 0px;
@@ -304,8 +303,8 @@
         width: 350px;
         height: 200px;
       }
-      &__text{
-        padding:0 10px;
+      &__text {
+        padding: 0 10px;
       }
       hr {
         margin: 10px auto;
@@ -401,6 +400,58 @@
     }
     &__text {
       font-size: 15px;
+    }
+  }
+  .swiper {
+    width: 300px;
+    height: 280px;
+  }
+  .swiper-slide {
+    height: 280px;
+  }
+  .swiper-slide img {
+    width: 210px;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    transform: scale(0.6);
+  }
+  .catalog {
+    &__content {
+      grid-template-columns: repeat(auto-fit, 300px);
+      justify-content: center;
+      justify-items: center;
+    }
+    .catalog-item {
+      min-height: 400px;
+      width: 300px;
+      padding: 0;
+      &__img {
+        width: 250px;
+        height: 200px;
+      }
+    }
+  }
+  .footer {
+    height: 500px;
+    &__map {
+      iframe {
+        height: 500px;
+      }
+    }
+    &__info {
+      width: 280px;
+      height: 180px;
+    }
+    &__adress {
+      margin-bottom: 16px;
+    }
+    &__phone {
+      margin-bottom: 16px;
+    }
+    &__social-item {
+      width: 45px;
+      height: 45px;
     }
   }
 }
