--- a/gulp/css/style.css
+++ b/gulp/css/style.css
@@ -1214,7 +1214,6 @@ html {
 
   .modal {
     width: 320px;
-    min-height: 350px;
     padding: 20px;
   }
 
@@ -1670,6 +1669,71 @@ html {
 
   .communication__text {
     font-size: 15px;
+  }
+
+  .swiper {
+    width: 300px;
+    height: 280px;
+  }
+
+  .swiper-slide {
+    height: 280px;
+  }
+
+  .swiper-slide img {
+    width: 210px;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    -webkit-transform: scale(0.6);
+        -ms-transform: scale(0.6);
+            transform: scale(0.6);
+  }
+
+  .catalog__content {
+    grid-template-columns: repeat(auto-fit, 300px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+
+  .catalog .catalog-item {
+    min-height: 400px;
+    width: 300px;
+    padding: 0;
+  }
+
+  .catalog .catalog-item__img {
+    width: 250px;
+    height: 200px;
+  }
+
+  .footer {
+    height: 500px;
+  }
+
+  .footer__map iframe {
+    height: 500px;
+  }
+
+  .footer__info {
+    width: 280px;
+    height: 180px;
+  }
+
+  .footer__adress {
+    margin-bottom: 16px;
+  }
+
+  .footer__phone {
+    margin-bottom: 16px;
+  }
+
+  .footer__social-item {
+    width: 45px;
+    height: 45px;
   }
 }
 
