--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -454,4 +454,31 @@
       height: 45px;
     }
   }
+  .modal {
+    width: 270px;
+    min-height: 100px;
+    padding: 15px;
+    &__close {
+      position: absolute;
+      top: -14px;
+      right: -30px;
+      font-size: 50px;
+      line-height: 50px;
+      color: $main_color;
+      position: absolute;
+      cursor: pointer;
+    }
+    &__title {
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+    &__subtitle {
+      font-size: 16px;
+      margin-bottom: 15px;
+    }
+    &--mini {
+      padding: 40px 40px 10px;
+      min-height: 120px;
+    }
+  }
 }
